--- a/App/Eventos/Pages/HistoryPage.xaml
+++ b/App/Eventos/Pages/HistoryPage.xaml
@@ -1,13 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <pages:BaseContentPage
-    x:Class="Eventos.Pages.EntryFormPage"
+    x:Class="Eventos.Pages.HistoryPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:extensions="clr-namespace:Eventos.Extensions"
     xmlns:pages="clr-namespace:Eventos.Common.Pages;assembly=Eventos.Common"
     xmlns:viewModels="clr-namespace:Eventos.ViewModels"
-    x:DataType="viewModels:EntryFormViewModel"
-    x:TypeArguments="viewModels:EntryFormViewModel">
+    x:DataType="viewModels:HistoryViewModel"
+    x:TypeArguments="viewModels:HistoryViewModel"
+    Shell.NavBarIsVisible="false">
 
     <StackLayout />
 
