--- a/App/Eventos/Pages/HomePage.xaml
+++ b/App/Eventos/Pages/HomePage.xaml
@@ -22,6 +22,13 @@
                 SemanticProperties.HeadingLevel="Level1"
                 Text="Bienvenido" />
 
+            <Label
+                FontSize="32"
+                HorizontalOptions="Center"
+                SemanticProperties.HeadingLevel="Level1"
+                Text="{Binding User.UserName}" />
+
+
         </VerticalStackLayout>
     </ScrollView>
 
