--- a/App/Eventos/Pages/LoginPage.xaml
+++ b/App/Eventos/Pages/LoginPage.xaml
@@ -4,27 +4,34 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:extensions="clr-namespace:Eventos.Extensions"
+    xmlns:local="clr-namespace:Eventos.Converters"
     xmlns:pages="clr-namespace:Eventos.Common.Pages;assembly=Eventos.Common"
     xmlns:viewModels="clr-namespace:Eventos.ViewModels"
     x:DataType="viewModels:LoginViewModel"
     x:TypeArguments="viewModels:LoginViewModel"
-    Shell.TabBarIsVisible="False"
-    Shell.NavBarIsVisible="false">
+    Shell.NavBarIsVisible="false"
+    Shell.TabBarIsVisible="False">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:InvertedBoolConverter x:Key="InvertedBoolConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
     <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="Center">
 
-        <StackLayout Margin="0,12,0,0" HeightRequest="32">
-            <ActivityIndicator
-                HeightRequest="32"
-                IsRunning="True"
-                IsVisible="{Binding IsBusy}"
-                WidthRequest="32" />
-        </StackLayout>
+        <ActivityIndicator
+            HeightRequest="32"
+            IsRunning="True"
+            IsVisible="{Binding IsBusy}"
+            WidthRequest="32" />
+
 
         <Button
-            TextColor="Black"
+             IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}"
             Command="{Binding LoginWithGoogleCommand}"
-            Text="Iniciar con Google" />
+            Text="Iniciar con Google"
+            TextColor="Black" />
 
     </StackLayout>
 
