--- a/App/Eventos/Pages/LoginPage.xaml
+++ b/App/Eventos/Pages/LoginPage.xaml
@@ -317,11 +317,22 @@
 
             <Label Margin="0,10,0,20" Text="Si no encuentras el correo, revisa tu carpeta de spam." />
 
-            <Label Text="Podrás reenviar el código en 02:59 minutos" />
+            <Label Text="Podrás reenviar el código en 02:59 segundos" />
+
+            <Label IsVisible="{Binding IsActiveSendCode,Converter={local:InvertedBoolConverter}}">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span Text="Podrás reenviar el código en " />
+                        <Span Text="{Binding Timer}" />
+                        <Span Text=" minutos" />
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
 
             <Button
                 BackgroundColor="Transparent"
-                Command="{Binding RecoverPasswordCommand}"
+                Command="{Binding CreateUserCommand}"
+                IsEnabled="{Binding IsActiveSendCode}"
                 HorizontalOptions="Center"
                 Text="Reenviar código"
                 TextColor="#D2E898" />
@@ -384,7 +395,7 @@
                 Margin="0,0,0,20"
                 BackgroundColor="Transparent"
                 BorderColor="#ABBA3C"
-                Command="{Binding RegistryUserCommand}"
+                Command="{Binding FinishRegistryCommand}"
                 CornerRadius="20"
                 MaximumWidthRequest="200"
                 MinimumWidthRequest="150"
